<resources>
    <string name="home_page">Chose function</string>
    <string name="temperature">temperature</string>
    <string name="counter">counter</string>

    <string name="app_name">APPinClass</string>
    <string name="button">Click to convert to Fahrenheit degree</string>
    <string name="save">SAVE</string>
    <string name="config">CONFIG</string>
    <string name="exchange_rate">Exchange Rate</string>
    <string name="dollar">DOLLAR</string>
    <string name="euro">EURO</string>
    <string name="won">WON</string>
    <string name="textViewA">Team A</string>
    <string name="textViewB">Team B</string>
    <string name="ScoreA" translatable="false">0</string>
    <string name="ScoreB" translatable="false">0</string>
    <string name="button23">+3 POINTS</string>
    <string name="button22">+2 POINTS</string>
    <string name="button21">FREE THROW</string>
    <string name="button13">+3 POINTS</string>
    <string name="button12">+2 POINTS</string>
    <string name="button11">FREE THROW</string>
    <string name="reset">RESET</string>
    <string name="show">Show Rate In List</string>
    <string name="show2">Show Rate In List_item</string>
    <string name="noData">No Data</string>
    <string name="show3">Show No Data</string>
</resources>