<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/inputRMB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:hint="input RMB"
        android:layout_gravity="center_horizontal"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/exchange_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exchange_rate"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp" />

    <Button
        android:id="@+id/dollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="exchangeRate"
        android:layout_margin="16dp"
        android:textSize="25sp"
        android:text="@string/dollar" />

    <Button
        android:id="@+id/euro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:onClick="exchangeRate"
        android:text="@string/euro"
        android:textSize="25sp" />

    <Button
        android:id="@+id/won"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:textSize="25sp"
        android:onClick="exchangeRate"
        android:text="@string/won" />

    <Button
        android:id="@+id/config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:onClick="jumpExchangeRate2"
        android:text="@string/config"
        android:textSize="25sp" />

    <Button
        android:id="@+id/show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:onClick="jumpToListView"
        android:textSize="25sp"
        android:text="@string/show" />

</LinearLayout>